@@ -3,10 +3,11 @@
 #ifndef TAGENGINE_H
 #define TAGENGINE_H
 
+#include <KUrl>
+
 #include <QString>
 #include <QStringList>
-#include <KUrl>
-#include <qimage.h>
+#include <QImage>
 
 // #include <MediaInfo/MediaInfo.h>
 
@@ -83,11 +84,6 @@ class TagData : public QObject
     Q_OBJECT
 public:
     /** Constructor */
-//     TagData( const QString& _artist = QString::null, const QString& _composer = QString::null,
-//              const QString& _album = QString::null, const QString& _title = QString::null,
-//              const QString& _genre = QString::null, const QString& _comment = QString::null,
-//              int _track = 0, int _disc = 0, int _discTotal = 0, int _year = 0,
-//              int _length = 0, int _fileSize = 0, int _bitrate = 0, int _samplingRate = 0 );
     TagData();
 
     /** Destructor */
